--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,13 @@
 }
 
 /* Custom scrollbar for dark theme */
-::-webkit-scrollbar {
-  width: 8px;
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
 
 ::-webkit-scrollbar-track {
